Исправил ошибки на валидаторе

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <--! Секция главной навигации-->
+    <!--Секция главной навигации-->
    <header>
        <nav>
        <a href="/">WebStudio</a> 
@@ -17,19 +17,19 @@
         <li><a href="">Контакты</a></li>
        </ul>
         </nav>
-        <--Контакты-->
+       <!--Контакты-->
        <ul>
            <li><a href="mailto:nfo@devstudio.com">info@devstudio.com</a></li>
-           <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+           <li><a href="tel:+380961111111">+38 (096) 111-11-11</a></li>
        </ul>
    </header>
-<--! Секция заказа услуги-->
+<!--Секция заказа услуги-->
    <main>
        <section>
            <h1>Эффективные решения<br /> для вашего бизнеса</h1>
         <button type="button">Заказать услугу</button>
        </section>
-<--! Секция навыков-->
+<!--Секция навыков-->
    <section>
        <ul>
            <li>
@@ -50,7 +50,7 @@
            </li>
        </ul>
    </section>
-<--! Секция услуг-->
+<!--Секция услуг-->
 <section>
     <ul>
         <li>
@@ -69,7 +69,7 @@
         </li>
     </ul>
 </section>
-<--! Секция команда-->
+<!--Секция команда-->
 <section>
     <ul>
         <li>
@@ -94,11 +94,11 @@
 </main>
 <footer>
     <a href="/">WebStudio</a>
-    
+
     <address>г. Киев, пр-т Леси Украинки, 26</address>
         <ul>
             <li><a href="mailto:nfo@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+            <li><a href="tel:+380961111111">+38 (096) 111-11-11</a></li>
         </ul>
 </footer>
 </body>
