--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -56,8 +56,6 @@
         <li>
             <h3>Чем мы занимаемся</h3>
         </li>
-    </ul>
-    <ul>
         <li>
             <img src="./images/box1.jpg" alt="человек работает за компютером" width="370" height="294"/>
         </li>
@@ -75,31 +73,38 @@
         <li>
             <h4>Наша команда</h4>
         </li>
-    </ul>
-    <ul>
         <li>
-            <img src="./images/teamcard1.jpg" alt="изображение человека" width="270" height="368"/>
+            <img src="./images/team/igor.jpg" alt="изображение человека" width="270" height="260">
+            <h4>Игорь Демьяненко</h4>
+            <p lang="en">Product Designer</p>
         </li>
         <li>
-            <img src="./images/teamcard2.jpg" alt="изображение человека" width="270" height="368"/>
+            <img src="./images/team/olga.jpg" alt="изображение человека" width="270" height="260"/>
+            <h4>Игорь Демьяненко</h4>
+            <p lang="en">Frontend Developer</p>
         </li>
         <li>
-            <img src="./images/teamcard3.jpg" alt="изображение человека" width="270" height="368"/>
+            <img src="./images/team/nikoiay.jpg" alt="изображение человека" width="270" height="260"/>
+            <h4>Игорь Демьяненко</h4>
+            <p lang="en">Marketing</p>
         </li>
         <li>
-            <img src="./images/teamcard4.jpg" alt="изображение человека" width="270" height="368"/>
+            <img src="./images/team/mihail.jpg" alt="изображение человека" width="270" height="260"/>
+            <h4>Игорь Демьяненко</h4>
+            <p lang="en">UI Designer</p>
         </li>
     </ul>
 </section>
 </main>
 <footer>
-    <a href="/">WebStudio</a>
-
-    <address>г. Киев, пр-т Леси Украинки, 26</address>
+    <address>
         <ul>
+            <li><a href="/">WebStudio</a></li>
+            <li><a href="https://goo.gl/maps/czCwbcnYRgwCp2mf7" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
             <li><a href="mailto:nfo@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 (096) 111-11-11</a></li>
         </ul>
+    </address>
 </footer>
 </body>
 </html>
