перенёс логотип из addres в footer

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <p lang="en">Frontend Developer</p>
         </li>
         <li>
-            <img src="./images/team/nikoiay.jpg" alt="изображение человека" width="270" height="260"/>
+            <img src="./images/team/nikolay.jpg" alt="изображение человека" width="270" height="260"/>
             <h3>Игорь Демьяненко</h3>
             <p lang="en">Marketing</p>
         </li>
@@ -94,9 +94,9 @@
 </section>
 </main>
 <footer>
+    <a href="/">WebStudio</a>
     <address>
         <ul>
-            <li><a href="/">WebStudio</a></li>
             <li><a href="https://goo.gl/maps/czCwbcnYRgwCp2mf7" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
             <li><a href="mailto:nfo@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 (096) 111-11-11</a></li>
